--- a/packages/sidenav/snippets/left.mdx
+++ b/packages/sidenav/snippets/left.mdx
@@ -80,8 +80,20 @@ export const SidenavPage = () => {
 };
 
 /* Sidenav logic */
+
+const style = {
+  sidenav: {
+    open: `w-7/12 md:w-60 bg-gray-800 text-white overflow-x-hidden`,
+    close: `w-0 bg-gray-800 text-white overflow-x-hidden`,
+    default: `h-screen fixed z-20 top-0 left-0 transition-all ease duration-200`,
+  },
+  item: `flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10`,
+  closeIcon: `absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer`,
+};
+
 export const Sidenav = ({ isOpen, toggle, children }) => {
-  const ref = useRef();
+  const ref = useRef(null);
+
   useEffect(() => {
     const handleOutsideClick = (event) => {
       if (!ref.current?.contains(event.target)) {
@@ -95,18 +107,11 @@ export const Sidenav = ({ isOpen, toggle, children }) => {
 
   return (
     <aside
-      className={
-        isOpen
-          ? `${className.default} ${className.enabled}`
-          : `${className.default} ${className.disabled}`
-      }
+      className={`${isOpen ? style.sidenav.open : style.sidenav.close} 
+      ${style.sidenav.default}`}
       ref={ref}
     >
-      <button
-        aria-label="Close"
-        className="absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer"
-        onClick={toggle}
-      >
+      <button aria-label="Close" className={style.closeIcon} onClick={toggle}>
         &times;
       </button>
       <div className="mt-12">{children}</div>
@@ -115,18 +120,10 @@ export const Sidenav = ({ isOpen, toggle, children }) => {
 };
 
 Sidenav.Item = ({ children, href }) => (
-  <a
-    href={href}
-    className="flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10"
-  >
+  <a href={href} className={style.item}>
     {children}
   </a>
 );
 
-/* Sidenav classNames */
-const className = {
-  default: `left h-screen fixed z-20 top-0 left-0 transition-all ease duration-200`,
-  enabled: `w-7/12 md:w-60 bg-gray-800 text-white overflow-x-hidden`,
-  disabled: `w-0  bg-gray-800 text-white overflow-x-hidden`,
-};
+export default Sidenav;
 ```
