--- a/packages/sidenav/snippets/notClosedOutside.mdx
+++ b/packages/sidenav/snippets/notClosedOutside.mdx
@@ -13,7 +13,7 @@ export const SidenavPage = () => {
         aria-disabled={isOpen}
         disabled={isOpen}
         onClick={toggle}
-        className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-gray-800"
+        className="text-white disabled:opacity-70 focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-indigo-800"
       >
         Click to open me
       </button>
@@ -80,20 +80,24 @@ export const SidenavPage = () => {
 };
 
 /* Sidenav logic */
+
+const style = {
+  sidenav: {
+    open: `w-7/12 md:w-60 bg-gray-800 text-white overflow-x-hidden`,
+    close: `w-0 bg-gray-800 text-white overflow-x-hidden`,
+    default: `h-screen fixed z-20 top-0 left-0 transition-all ease duration-200`,
+  },
+  item: `flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10`,
+  closeIcon: `absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer`,
+};
+
 export const Sidenav = ({ isOpen, toggle, children }) => {
   return (
     <aside
-      className={
-        isOpen
-          ? `${className.default} ${className.enabled}`
-          : `${className.default} ${className.disabled}`
-      }
+      className={`${isOpen ? style.sidenav.open : style.sidenav.close} 
+      ${style.sidenav.default}`}
     >
-      <button
-        aria-label="Close"
-        className="absolute top-1 focus:outline-none right-3 text-3xl text-white cursor-pointer"
-        onClick={toggle}
-      >
+      <button aria-label="Close" className={style.closeIcon} onClick={toggle}>
         &times;
       </button>
       <div className="mt-12">{children}</div>
@@ -102,18 +106,10 @@ export const Sidenav = ({ isOpen, toggle, children }) => {
 };
 
 Sidenav.Item = ({ children, href }) => (
-  <a
-    href={href}
-    className="flex justify-start cursor-pointer font-medium hover:text-gray-400 ml-8 mb-10"
-  >
+  <a href={href} className={style.item}>
     {children}
   </a>
 );
 
-/* Sidenav classNames */
-const className = {
-  default: `flex h-screen fixed z-20 top-0 right-0 transition-all ease duration-200`,
-  enabled: `w-7/12 md:w-60 bg-gray-800 text-white overflow-x-hidden`,
-  disabled: `w-0  bg-gray-800 text-white overflow-x-hidden`,
-};
+export default Sidenav;
 ```
