remove appearance-none class in Field component

--- a/packages/field/snippets/default.mdx
+++ b/packages/field/snippets/default.mdx
@@ -93,7 +93,7 @@ const Field = forwardRef((props, ref) => {
 const style = {
   container: `relative mb-6 mt-3`,
   dot: `text-red-500 pl-0.5`,
-  default: `rounded-lg flex-1 mt-1 appearance-none w-full py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300 border-transparent`,
+  default: `rounded-lg flex-1 mt-1 w-full py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300 border-transparent`,
   checkbox: `checked:bg-blue-500 checked:right-0 focus:outline-none right-4 duration-200 ease-in absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer`,
   checkboxContainer: `relative w-10 mr-2 align-middle select-none mt-2`,
   checkboxLabel: `block overflow-hidden h-6 rounded-full bg-gray-300`,
