update packages and snippets

--- a/packages/code/snippets/black.mdx
+++ b/packages/code/snippets/black.mdx
@@ -3,7 +3,7 @@ import { useEffect, useState } from 'react';
 
 export const CodePage = () => (
   <div className="m-8">
-    <Code>yarn add @tailwindcss/jit</Code>
+    <Code>yarn add tailwindcss</Code>
   </div>
 );
 
