--- a/packages/code/snippets/withoutCopy.mdx
+++ b/packages/code/snippets/withoutCopy.mdx
@@ -1,9 +1,9 @@
 ```jsx
 export const CodePage = () => (
   <div className="m-8">
-    <Code>yarn add next react react-dom</Code>
+    <Code>yarn add sequelize</Code>
     <div className="mb-5" />
-    <Code>npm install next react react-dom</Code>
+    <Code>npm install mongoose</Code>
   </div>
 );
 
