--- a/packages/code/snippets/default.mdx
+++ b/packages/code/snippets/default.mdx
@@ -5,7 +5,7 @@ export const CodePage = () => (
   <div className="m-8">
     <Code>yarn add next react react-dom</Code>
     <div className="mb-5" />
-    <Code>npm install next react react-dom</Code>
+    <Code>npm install @supabase/supabase-js</Code>
   </div>
 );
 
