--- a/packages/code/snippets/withoutCopy.mdx
+++ b/packages/code/snippets/withoutCopy.mdx
@@ -9,9 +9,7 @@ export const CodePage = () => (
 
 /* logic */
 const Code = ({ children }) => (
-  <pre
-    className={`inline-flex font-mono text-sm py-2.5 px-4 rounded overflow-x-auto max-w-full bg-gray-100 text-black border`}
-  >
+  <pre className="inline-flex font-mono text-sm py-2.5 px-4 rounded overflow-x-auto max-w-full bg-gray-100 text-black border">
     <span>{children}</span>
   </pre>
 );
