--- a/packages/card/snippets/multiple.mdx
+++ b/packages/card/snippets/multiple.mdx
@@ -7,20 +7,18 @@ export const CardPage = () => (
           className="max-w-full h-auto md:h-48"
           src="https://res.cloudinary.com/beloved/image/upload/v1608683063/Assets/lamborghini_mxb2j7.jpg"
           alt="Bugatti"
-          width={1200}
-          height={800}
         />
-        <CardBody>
-          <CardTitle className="text-lg">Lamborghini</CardTitle>
-          <CardText>
+        <Card.Body>
+          <Card.Title className="text-lg">Lamborghini</Card.Title>
+          <Card.Text>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </CardText>
+          </Card.Text>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </CardBody>
+        </Card.Body>
       </Card>
     </div>
     <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3">
@@ -29,20 +27,18 @@ export const CardPage = () => (
           className="max-w-full h-auto md:h-48"
           src="https://res.cloudinary.com/beloved/image/upload/v1608683147/Assets/bugatti-cars-7-free-car-hd-wallpaper_j4xyj6.jpg"
           alt="Bugatti"
-          width={1200}
-          height={800}
         />
-        <CardBody>
-          <CardTitle className="text-lg">Bugatti</CardTitle>
-          <CardText>
+        <Card.Body>
+          <Card.Title className="text-lg">Bugatti</Card.Title>
+          <Card.Text>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </CardText>
+          </Card.Text>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </CardBody>
+        </Card.Body>
       </Card>
     </div>
     <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3">
@@ -51,51 +47,45 @@ export const CardPage = () => (
           className="max-w-full h-auto md:h-48"
           src="https://res.cloudinary.com/beloved/image/upload/v1599343428/Assets/3_znyzrd.jpg"
           alt="blog"
-          width={1200}
-          height={800}
         />
-        <CardBody>
-          <CardTitle className="text-lg">Computer</CardTitle>
-          <CardText>
+        <Card.Body>
+          <Card.Title className="text-lg">Computer</Card.Title>
+          <Card.Text>
             Joe made the sugar cookies; Susan decorated them. When motorists
             sped in and out of traffic.
-          </CardText>
+          </Card.Text>
           <a className="text-indigo-500 inline-flex items-center mt-4 cursor-pointer">
             View Details
             <ArrowIcon />
           </a>
-        </CardBody>
+        </Card.Body>
       </Card>
     </div>
   </div>
 );
 
-const Card = ({ children, className }) => (
-  <div
-    className={`${className} relative flex flex-col border-2 border-gray-200 rounded-lg`}
-    style={style}
-  >
-    {children}
-  </div>
-);
-
-const CardBody = ({ children }) => (
-  <div className="block flex-grow flex-shrink p-5">{children}</div>
-);
-
-const CardTitle = ({ children, className }) => (
-  <div className={`${className} font-medium text-gray-700 mb-3`}>
-    {children}
-  </div>
-);
-
-const CardText = ({ children }) => (
-  <div className="text-gray-500">{children}</div>
-);
-
+/* Logic */
 const style = {
+  card: `relative flex flex-col border-2 border-gray-200 rounded-lg`,
+  cardBody: `block flex-grow flex-shrink p-5`,
+  cardTitle: `font-medium text-gray-700 mb-3`,
+  cardText: `text-gray-500`,
+};
+const inlineStyle = {
   boxShadow: '0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%)',
 };
+
+const Card = ({ children }) => (
+  <div className={style.card} style={inlineStyle}>
+    {children}
+  </div>
+);
+
+Card.Body = ({ children }) => <div className={style.cardBody}>{children}</div>;
+Card.Title = ({ children }) => (
+  <div className={style.cardTitle}>{children}</div>
+);
+Card.Text = ({ children }) => <div className={style.cardText}>{children}</div>;
 
 const ArrowIcon = () => (
   <svg
