--- a/packages/modal/snippets/extraLarge.mdx
+++ b/packages/modal/snippets/extraLarge.mdx
@@ -49,8 +49,8 @@ export const ModalPage = () => {
 /* Modal logic*/
 const style = {
   container: `fixed top-0 left-0 z-40 w-full h-full m-0`,
-  content: `animate-modal-left relative flex flex-col bg-white pointer-events-auto`,
-  orientation: `mt-12 mx-8 md:flex md:w-96 md:h-full md:m-0 md:left-0 md:mx-0 md:my-0 md:absolute`,
+  content: `relative flex flex-col bg-white pointer-events-auto`,
+  orientation: `mt-12 mx-8 md:w-12/12 md:pt-12`,
   overlay: `fixed top-0 left-0 z-40 w-screen h-screen bg-black opacity-50`,
   header: `items-start justify-between p-4 border-b border-gray-300`,
   headerTitle: `text-2xl md:text-3xl font-light`,
