add overflow for modal

--- a/packages/modal/snippets/withoutAnimation.mdx
+++ b/packages/modal/snippets/withoutAnimation.mdx
@@ -48,10 +48,10 @@ export const ModalPage = () => {
 
 /*Modal logic*/
 const style = {
-  container: `fixed top-0 left-0 z-40 w-full h-full m-0`,
+  container: `fixed top-0 overflow-y-auto left-0 z-40 w-full h-full m-0`,
   content: `relative flex flex-col bg-white pointer-events-auto`,
-  orientation: `mt-12 mx-8 md:m-auto md:w-6/12 lg:w-4/12 md:pt-12`,
-  overlay: `fixed top-0 left-0 z-40 w-screen h-screen bg-black opacity-50`,
+  orientation: `mt-12 mx-8 pb-6 md:m-auto md:w-6/12 lg:w-4/12 md:pt-12`,
+  overlay: `fixed top-0 left-0 z-30 w-screen h-screen bg-black opacity-50`,
   header: `items-start justify-between p-4 border-b border-gray-300`,
   headerTitle: `text-2xl md:text-3xl font-light`,
   body: `flex-shrink flex-grow p-4`,
