--- a/packages/accordion/snippets/green.mdx
+++ b/packages/accordion/snippets/green.mdx
@@ -1,7 +1,7 @@
-import { useState } from 'react';
-import { AccordionHeader, Accordion } from '@/packages/accordion';
+```jsx
+import { useState, useRef } from 'react';
 
-const AccordionGrayColor = () => {
+export const AccordionPage = () => {
   const [activeItem, setActiveItem] = useState('');
 
   const toggleActiveItem = (id) => () => {
@@ -9,18 +9,8 @@ const AccordionGrayColor = () => {
   };
 
   return (
-    <div className="mb-12">
-      <h2 className="font-bold text-gray-600 text-lg md:text-2xl mb-6">
-        Gray header
-      </h2>
-      <AccordionHeader
-        id="item-1"
-        activeItem={activeItem}
-        variant="gray"
-        onClick={toggleActiveItem('item-1')}
-        downIcon={<AngleDownIcon className="mt-1 h-4" />}
-        upIcon={<AngleUpIcon className="mt-1 h-4" />}
-      >
+    <div>
+      <AccordionHeader onClick={toggleActiveItem('item-1')}>
         Accordion Group Item #1
       </AccordionHeader>
       <Accordion id="item-1" isOpen={activeItem}>
@@ -37,14 +27,7 @@ const AccordionGrayColor = () => {
           sunt explicabo.
         </p>
       </Accordion>
-      <AccordionHeader
-        id="item-2"
-        activeItem={activeItem}
-        variant="gray"
-        onClick={toggleActiveItem('item-2')}
-        downIcon={<AngleDownIcon className="mt-1 h-4" />}
-        upIcon={<AngleUpIcon className="mt-1 h-4" />}
-      >
+      <AccordionHeader onClick={toggleActiveItem('item-2')}>
         Accordion Group Item #2
       </AccordionHeader>
       <Accordion id="item-2" isOpen={activeItem}>
@@ -61,14 +44,7 @@ const AccordionGrayColor = () => {
           similique sunt in culpa qui officia deserunt mollitia animi.
         </p>
       </Accordion>
-      <AccordionHeader
-        id="item-3"
-        activeItem={activeItem}
-        variant="gray"
-        onClick={toggleActiveItem('item-3')}
-        downIcon={<AngleDownIcon className="mt-1 h-4" />}
-        upIcon={<AngleUpIcon className="mt-1 h-4" />}
-      >
+      <AccordionHeader onClick={toggleActiveItem('item-3')}>
         Accordion Group Item #3
       </AccordionHeader>
       <Accordion id="item-3" isOpen={activeItem}>
@@ -89,29 +65,27 @@ const AccordionGrayColor = () => {
   );
 };
 
-const AngleUpIcon = (props) => (
-  <svg
-    fill="white"
-    strokeWidth="0"
-    viewBox="0 0 320 512"
-    xmlns="http://www.w3.org/2000/svg"
-    {...props}
-  >
-    <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
-  </svg>
-);
+/* Logic */
+const style = {
+  accordion: `overflow-hidden md:overflow-x-hidden transition-height ease duration-300 text-gray-600`,
+  accordionHeader: `block focus:outline-none bg-green-800 text-white border-b my-2 p-3`,
+};
 
-const AngleDownIcon = (props) => (
-  <svg
-    stroke="currentColor"
-    fill="white"
-    strokeWidth="0"
-    viewBox="0 0 320 512"
-    xmlns="http://www.w3.org/2000/svg"
-    {...props}
-  >
-    <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
-  </svg>
-);
+const Accordion = ({ children, id, isOpen }) => {
+  const ref = useRef();
+  const inlineStyle =
+    isOpen === id ? { height: ref.current?.scrollHeight } : { height: 0 };
 
-export default AccordionGrayColor;
+  return (
+    <div id={id} className={style.accordion} ref={ref} style={inlineStyle}>
+      {children}
+    </div>
+  );
+};
+
+const AccordionHeader = ({ children, ...rest }) => (
+  <div role="button" {...rest} className={style.accordionHeader}>
+    {children}
+  </div>
+);
+```
