--- a/packages/accordion/snippets/indigo.mdx
+++ b/packages/accordion/snippets/indigo.mdx
@@ -2,22 +2,22 @@
 import { useState, useRef } from 'react';
 
 export const AccordionPage = () => {
-  const [accordionId, setAccordionId] = useState('');
+  const [activeItem, setActiveItem] = useState('');
 
-  const toggleCollapse = (id) => () => {
-    setAccordionId((prevState) => (prevState !== id ? id : ''));
+  const toggleActiveItem = (id) => () => {
+    setActiveItem((prevState) => (prevState !== id ? id : ''));
   };
 
   return (
     <div>
       <AccordionHeader
         id="item-1"
-        accordionId={accordionId}
-        onClick={toggleCollapse('item-1')}
+        activeItem={activeItem}
+        onClick={toggleActiveItem('item-1')}
       >
         Accordion Group Item #1
       </AccordionHeader>
-      <Accordion id="item-1" isOpen={accordionId}>
+      <Accordion id="item-1" isOpen={activeItem}>
         <p className="mb-4">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -33,12 +33,12 @@ export const AccordionPage = () => {
       </Accordion>
       <AccordionHeader
         id="item-2"
-        accordionId={accordionId}
-        onClick={toggleCollapse('item-2')}
+        activeItem={activeItem}
+        onClick={toggleActiveItem('item-2')}
       >
         Accordion Group Item #2
       </AccordionHeader>
-      <Accordion id="item-2" isOpen={accordionId}>
+      <Accordion id="item-2" isOpen={activeItem}>
         <p className="mb-4">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
           odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla
@@ -54,12 +54,12 @@ export const AccordionPage = () => {
       </Accordion>
       <AccordionHeader
         id="item-3"
-        accordionId={accordionId}
-        onClick={toggleCollapse('item-3')}
+        activeItem={activeItem}
+        onClick={toggleActiveItem('item-3')}
       >
         Accordion Group Item #3
       </AccordionHeader>
-      <Accordion id="item-3" isOpen={accordionId}>
+      <Accordion id="item-3" isOpen={activeItem}>
         <p className="mb-4">
           dales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor.
           Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas
@@ -82,6 +82,7 @@ const style = {
   accordion: `overflow-hidden md:overflow-x-hidden transition-height ease duration-300 text-gray-600`,
   accordionHeader: `block focus:outline-none bg-indigo-800 text-white border-b my-2 p-3`,
 };
+
 const Accordion = ({ children, id, isOpen }) => {
   const ref = useRef();
   const inlineStyle =
@@ -94,44 +95,41 @@ const Accordion = ({ children, id, isOpen }) => {
   );
 };
 
-const AccordionHeader = ({ accordionId, id, children, ...rest }) => (
+const AccordionHeader = ({ activeItem, id, children, ...rest }) => (
   <div role="button" {...rest} className={style.accordionHeader}>
     {children}
     <span className="float-right">
-      {accordionId === id ? (
-        <MinusCircleIcon className="mt-1 h-4" />
+      {activeItem === id ? (
+        <AngleUpIcon className="mt-1 h-4" />
       ) : (
-        <PlusCircleIcon className="mt-1 h-4" />
+        <AngleDownIcon className="mt-1 h-4" />
       )}
     </span>
   </div>
 );
 
-export const PlusCircleIcon = (props) => (
+const AngleUpIcon = (props) => (
   <svg
-    stroke="currentColor"
-    fill="currentColor"
+    fill="white"
     strokeWidth="0"
-    viewBox="0 0 1024 1024"
+    viewBox="0 0 320 512"
     xmlns="http://www.w3.org/2000/svg"
     {...props}
   >
-    <path d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z" />
-    <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" />
+    <path d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" />
   </svg>
 );
 
-export const MinusCircleIcon = (props) => (
+const AngleDownIcon = (props) => (
   <svg
     stroke="currentColor"
-    fill="currentColor"
+    fill="white"
     strokeWidth="0"
-    viewBox="0 0 1024 1024"
+    viewBox="0 0 320 512"
     xmlns="http://www.w3.org/2000/svg"
     {...props}
   >
-    <path d="M696 480H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z" />
-    <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z" />
+    <path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
   </svg>
 );
 ```
