--- a/packages/autocomplete/snippets/index.mdx
+++ b/packages/autocomplete/snippets/index.mdx
@@ -1,7 +1,7 @@
 ```jsx
-import { useEffect, useRef, useState, useCallback } from 'react';
+import { useState, useCallback, useRef, useEffect } from 'react';
 
-export const AutoCompletePage = () => {
+export const AutocompletePage = () => {
   const [value, setValue] = useState('');
   const allCountries = countries.map((country) => country.name);
   return (
@@ -9,134 +9,149 @@ export const AutoCompletePage = () => {
       <Autocomplete
         value={value}
         setValue={setValue}
-        options={allCountries}
         name="search"
         label="Countries"
         placeholder="where are you from?"
+        suggestions={allCountries}
       />
     </div>
   );
 };
 
-/* COMPONENT LOGIC */
+/* Logic */
 
 const style = {
   container: `relative mb-6 mt-3`,
   default: `rounded-lg w-full flex-1 mt-1 py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300 border-transparent`,
   disabled: `cursor-not-allowed`,
   label: `text-gray-700`,
-  option: {
-    list: `shadow-xl absolute top-full left-0 right-0 border w-auto md:max-w-xs overflow-y-auto max-h-80 mt-4 bg-white p-3 z-20`,
-    item: `px-4 py-3 focus text-sm text-gray-700 cursor-pointer hover:bg-gray-100`,
+  suggestion: {
+    list: `shadow-xl absolute top-full left-0 right-0 border w-auto md:max-w-xs overflow-y-auto max-h-80 mt-2 bg-white p-3 z-20`,
+    item: `px-4 py-3 focus text-sm text-gray-700 cursor-pointer hover:bg-gray-200`,
+    activeItem: 'bg-gray-300',
   },
 };
 
-const Autocomplete = ({ options, value, name, label, setValue, ...rest }) => {
-  const [activeOption, setActiveOption] = useState(0);
-  const [filteredOptions, setFilteredOptions] = useState([]);
-  const [showOptions, setShowOptions] = useState(false);
+const Autocomplete = ({
+  name,
+  label,
+  suggestions,
+  value,
+  setValue,
+  ...rest
+}) => {
+  const [activeSuggestion, setActiveSuggestion] = useState(0);
+  const [filteredSuggestions, setFilteredSuggestions] = useState([]);
+  const [showSuggestions, setShowSuggestions] = useState(false);
   const ref = useRef(null);
 
   useEffect(() => {
     const handleOutsideClick = (event) => {
       if (!ref.current?.contains(event.target)) {
-        if (!showOptions) return;
-        setShowOptions(false);
+        if (!showSuggestions) return;
+        setShowSuggestions(false);
       }
     };
     window.addEventListener('click', handleOutsideClick);
     return () => window.removeEventListener('click', handleOutsideClick);
-  }, [showOptions, ref]);
+  }, [showSuggestions, ref]);
 
   const handleChange = useCallback(
     (e) => {
       const userInput = e.currentTarget.value;
-      const changedFilteredOptions =
-        options &&
-        options.filter(
-          (item) => item.toLowerCase().indexOf(userInput.toLowerCase()) > -1,
-        );
-      setActiveOption(0);
-      setFilteredOptions(changedFilteredOptions);
+      const filteredSuggestions = suggestions.filter(
+        (suggestion) =>
+          suggestion.toLowerCase().indexOf(userInput.toLowerCase()) > -1,
+      );
+
+      setActiveSuggestion(0);
+      setFilteredSuggestions(filteredSuggestions);
+      setShowSuggestions(true);
       setValue(e.currentTarget.value);
-      setShowOptions(true);
     },
     [value],
   );
 
   const onClick = (e) => {
-    setActiveOption(0);
-    setFilteredOptions([]);
+    setActiveSuggestion(0);
+    setFilteredSuggestions([]);
+    setShowSuggestions(false);
     setValue(e.currentTarget.innerText);
-    setShowOptions(false);
   };
 
-  const onKeyDown = (e) => () => {
+  const onKeyDown = (e) => {
+    // User pressed the enter key
     if (e.keyCode === 13) {
-      setActiveOption(0);
-      setValue(filteredOptions[activeOption]);
-      setShowOptions(false);
-    } else if (e.keyCode === 38) {
-      if (activeOption === 0) {
+      setActiveSuggestion(0);
+      setShowSuggestions(false);
+      setValue(filteredSuggestions[activeSuggestion]);
+    }
+    // User pressed the up arrow
+    else if (e.keyCode === 38) {
+      if (activeSuggestion === 0) {
         return;
       }
-      setActiveOption((prevState) => prevState - 1);
-    } else if (e.keyCode === 40) {
-      if (activeOption === filteredOptions.length - 1) {
+      setActiveSuggestion(activeSuggestion - 1);
+    }
+    // User pressed the down arrow
+    else if (e.keyCode === 40) {
+      if (activeSuggestion - 1 === filteredSuggestions.length) {
         return;
       }
-      setActiveOption((prevState) => prevState + 1);
+      setActiveSuggestion(activeSuggestion + 1);
     }
   };
 
-  let optionList;
-  if (showOptions && value) {
-    if (filteredOptions && filteredOptions.length !== 0) {
-      optionList = (
-        <ul className={style.option.list}>
-          {filteredOptions.map((item) => (
-            <li
-              role="link"
-              tabIndex={0}
-              className={style.option.item}
-              key={item}
-              onClick={onClick}
-            >
-              {item}
-            </li>
-          ))}
+  let suggestionsListComponent;
+
+  if (showSuggestions && value) {
+    if (filteredSuggestions.length) {
+      suggestionsListComponent = (
+        <ul className={style.suggestion.list}>
+          {filteredSuggestions.map((suggestion, index) => {
+            let className;
+
+            if (index === activeSuggestion) {
+              className = `${style.suggestion.item} ${style.suggestion.activeItem}`;
+            }
+
+            if (index !== activeSuggestion) {
+              className = style.suggestion.item;
+            }
+            return (
+              <li className={className} key={suggestion} onClick={onClick}>
+                {suggestion}
+              </li>
+            );
+          })}
         </ul>
       );
     } else {
-      optionList = (
-        <div ref={ref} className="mt-4 text-sm text-gray-700">
-          <em>No results found</em>
+      suggestionsListComponent = (
+        <div className="mt-4 text-sm text-gray-700">
+          <em>No suggestions available!</em>
         </div>
       );
     }
   }
 
   return (
-    <>
-      <div className={style.container}>
-        <label htmlFor={name} className={style.label}>
-          {label}
-        </label>
-        <input
-          autoComplete="off"
-          className={style.default}
-          onChange={handleChange}
-          onKeyDown={onKeyDown}
-          value={value}
-          {...rest}
-        />
-        {optionList}
-      </div>
-    </>
+    <div className={style.container}>
+      <label htmlFor={name} className={style.label}>
+        {label}
+      </label>
+      <input
+        autoComplete="off"
+        className={style.default}
+        onChange={handleChange}
+        onKeyDown={onKeyDown}
+        value={value}
+        {...rest}
+      />
+      {suggestionsListComponent}
+    </div>
   );
 };
-
-// countries list
 const countries = [
   { name: 'Afghanistan', code: 'AF' },
   { name: 'Åland Islands', code: 'AX' },
